--- a/index.html
+++ b/index.html
@@ -22,6 +22,45 @@
             </a>
         </h1>
     </header>
+
+    <!-- 
+        mainタグの作成
+        ・profile用とwork用の箱を作成する
+        →divタグを使っていく
+     -->
+     <div class="block-main">
+         <!--profile用の箱  -->
+        <div　class="box-profile">
+            <h2>
+                <span>P</span>rofile
+            </h2>
+            <div>
+                <img src="" alt="">
+                <b>Snoopy</b>
+                <p>HTML /CSS /PHP /MySQL /Laravel /Adobe XD</p>
+                <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+            </div>
+            <ul>
+                <li>
+                    <a href="">
+                        <img src="" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="" alt="">
+                    </a>
+                </li>
+            </ul>
+
+         </div>
+
+         <!-- work用の箱 -->
+         <div>
+
+         </div>
+
+     </div>
     
 </body>
 </html>
