--- a/index.html
+++ b/index.html
@@ -31,24 +31,24 @@
      <div class="block-main">
          <!--profile用の箱  -->
         <div　class="box-profile">
-            <h2>
-                <span>P</span>rofile
+            <h2 class="sub-title">
+                <span class="color-green">P</span>rofile
             </h2>
-            <div>
-                <img src="" alt="">
+            <div class="item-list">
+                <img src="img/profile.png" alt="プロフィール画像">
                 <b>Snoopy</b>
-                <p>HTML /CSS /PHP /MySQL /Laravel /Adobe XD</p>
+                <p class="color-green">HTML /CSS /PHP /MySQL /Laravel /Adobe XD</p>
                 <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
             </div>
-            <ul>
+            <ul class="icon-list">
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="img/github (1).png" alt="githubアイコン">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="img/twitter.png" alt="twitterアイコン">
                     </a>
                 </li>
             </ul>
