--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      -->
      <div class="block-main">
          <!--profile用の箱  -->
-        <div　class="box-profile">
+        <div class="box-profile">
             <h2 class="sub-title">
                 <span class="color-green">P</span>rofile
             </h2>
@@ -55,12 +55,50 @@
 
          </div>
 
+         <div class="box-works">
          <!-- work用の箱 -->
-         <div>
+            <h2 class="sub-title">
+                <span class="color-green">W</span>orks</h2>
+
+            <ul class="works-list">
+                <li>
+                    <img src="img/work.png" alt="Twitterクローンの画像">
+                    <h3>Twitterクローン</h3>
+                    <span>HTML/ CSS/ PHP/ MySQL</span>
+                    <div class="link">
+                        <a href="">Webサイト</a>
+                        <a href="">GitHub</a>
+                    </div>
+                </li>
+
+                <li>
+                    <img src="img/work.png" alt="Twitterクローンの画像">
+                    <h3>Twitterクローン</h3>
+                    <span>HTML/ CSS/ PHP/ MySQL</span>
+                    <div class="link">
+                        <a href="">Webサイト</a>
+                        <a href="">GitHub</a>
+                    </div>
+                </li>
+
+                <li>
+                    <img src="img/work.png" alt="Twitterクローンの画像">
+                    <h3>Twitterクローン</h3>
+                    <span>HTML/ CSS/ PHP/ MySQL</span>
+                    <div class="link">
+                        <a href="">Webサイト</a>
+                        <a href="">GitHub</a>
+                    </div>
+                </li>
+            </ul>
 
          </div>
 
      </div>
+     <!-- footerタグの設定 -->
+    <footer class="block-footer">
+        <p>Copyright TECH I.S., Inc.</p>
+    </footer>
     
 </body>
 </html>
