--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- viewportの設定 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- このサイトは何か　説明する場所 -->
+    <!-- このサイトは何か説明する場所 -->
     <meta name="description" content="自己紹介"> 
     <!-- タイトルの設定 -->
     <title>PORTFOLIO</title>
@@ -35,8 +36,8 @@
                 <span class="color-green">P</span>rofile
             </h2>
             <div class="item-list">
-                <img src="img/profile.png" alt="プロフィール画像">
-                <b>Snoopy</b>
+                <img src="img/man.png" alt="プロフィール画像">
+                <b>おくだつかさ</b>
                 <p class="color-green">HTML /CSS /PHP /MySQL /Laravel /Adobe XD</p>
                 <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
             </div>
